# tree-sitter-alumina

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-alumina.h  tree-sitter-alumina.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_alumina/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAluminaTests/: TreeSitterAluminaTests.swift
src/: grammar.json  node-types.json  parser.c
