[package]
name = "tree-sitter-alumina"
description = "Alumina grammar for the Tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "alumina"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/alumina-lang/tree-sitter-alumina"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
